...
                
                // Zawartość: Prostokąt i komponenty
                contentView
            }
            
            .alert(isPresented: $showAlert) {
                Alert(title: Text(languageManager.localizedString(forKey: "login_failed")), message: Text(alertMessage), dismissButton: .default(Text("OK")))
                
            }
            .onAppear {
                if !UserDefaults.standard.bool(forKey: "isRemembered") {
                    resetLoginData()
                } else {
...

            VStack(spacing: 20) {
                Text(languageManager.localizedString(forKey: "login_account_header"))
                    .font(Font.custom("RobotoMono-Bold", size: 28))
                    .multilineTextAlignment(.center)
                    .foregroundColor(Color(red: 0.27, green: 0.43, blue: 0.69))
                    .accessibilityIdentifier("loginAccountIdentifier")
                

                ZStack(alignment: .leading) {
                    if username.isEmpty { // Sprawdzamy, czy pole tekstowe jest puste
                        Text(languageManager.localizedString(forKey: "username_placeholder"))
                            .padding(.leading, 17) // Opcjonalne odsunięcie tekstu
...
                        .cornerRadius(10)
                        .foregroundColor(Color(red: 0.27, green: 0.43, blue: 0.69))
                        .autocapitalization(.none)
                        .keyboardType(.default)
                        .textContentType(.username)
                        .font(.system(size: 16, weight: .semibold, design: .monospaced))
                        .accessibilityIdentifier("usernameTextField") // Dodano identyfikator
                }
                
                ZStack(alignment: .leading) {
                    if password.isEmpty { // Sprawdzamy, czy pole tekstowe jest puste
                        Text(languageManager.localizedString(forKey: "password_placeholder"))
                            .padding(.leading, 17) // Opcjonalne odsunięcie tekstu
...
                        .background(Color(red: 0.87, green: 0.85, blue: 0.89, opacity: 0.75))
                        .cornerRadius(10)
                        .foregroundColor(Color(red: 0.27, green: 0.43, blue: 0.69))
                        .autocapitalization(.none)
                        .textContentType(.password)
                        .font(.system(size: 16, weight: .semibold, design: .monospaced))
                        .accessibilityIdentifier("passwordTextField") // Dodano identyfikator
                }

                Toggle(isOn: $rememberMe) {
                    Text(languageManager.localizedString(forKey: "remember_me"))
                        .font(Font.custom("RobotoMono-Regular", size: 15))
                        .foregroundColor(Color(red: 0.27, green: 0.43, blue: 0.69))
...
                                endPoint: UnitPoint(x: 1, y: 0.5)
                            )
                        )
                        .cornerRadius(100.0)
                    
                }
                .accessibilityIdentifier("loginButton") // Dodano identyfikator

                NavigationLink(
                    destination: RegistrationView(isLoggedIn: $isLoggedIn, loggedInUsername: $loggedInUsername, showRegistrationSuccessAlert: $showRegistrationSuccessAlert)
                        .environmentObject(webSocketManager)
                        .environmentObject(languageManager)
                ) {
...
                                startPoint: UnitPoint(x: 0, y: 0.5),
                                endPoint: UnitPoint(x: 1, y: 0.5)
                            )
                        )
                        .cornerRadius(100.0)
                }
                .accessibilityIdentifier("registrationViewButton")
            }
            .padding()
            .frame(maxWidth: 321, maxHeight: 436)
            
            Button(action: {
                showLanguageSelection = true
...
                        .foregroundColor(.white)
                }
            }
            .padding()
            .offset(y: 250)
            .shadow(radius: 10)
            .accessibilityIdentifier("languageSelectionButton") // Dodano identyfikator
        }
        .offset(y: 110)
    }
    
    func login(username: String, password: String, using session: URLSession = URLSession.shared) {
        print("Login button tapped")
...
