...
                    }
                    Spacer() // Przesuwa zawartość w prawo
                }
                .padding(.horizontal)
                .padding(20) // Dostosuj padding według potrzeb
                .padding(.top, -400) // Dostosuj padding według potrzeb
                .accessibilityIdentifier("languageSelectionBackButton")
                
                VStack(spacing: 25) {
                    Text(languageManager.localizedString(forKey: "select_language_title"))
                        .font(Font.custom("RobotoMono-Bold", size: 32))
                        .multilineTextAlignment(.center)
                        .foregroundColor(.white)
...
