...
                        //Text("Welcome, testestestestsetestes!")
                            .font(Font.custom("RobotoMono-Bold", size: 18))
                            .frame(width: 250, height: 58)
                            .multilineTextAlignment(.leading)
                            .foregroundColor(.white)
                            .padding(.trailing, 60)
                            .accessibilityIdentifier("welcomeIdentifier")
                        
                        ZStack{
                            Circle()
                                .fill(Color.white)
                                .frame(width: 60, height: 60)
                                .shadow(radius: 10)
...
